--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "isomorphic-fetch": "2.2.1",
+    "bulma": "0.6.1"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
